fixed work section alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -662,6 +662,7 @@ body.light-theme{
 
 .work__filters{
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   column-gap: .75rem;
